--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 }
 
 body {
+  font-family: PremierSans-Regular;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
